# wb_parser_tg

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  ruff.toml  setup.cfg
app/bot/: config.py  keyboards.py  lexicon.py  main.py  services.py  state.py  user_handlers.py
app/db/: db_mgmt.py
app/parser/: parser.py  services.py
